--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "not < 0.25%"
   ],
   "scripts": {
-    "lint": "eslint src/",
+    "lint": "eslint --fix --ext .js,.jsx .",
     "build": "webpack --mode production",
     "start": "webpack serve --mode development --open"
   },
@@ -30,7 +30,7 @@
     "node": "16"
   },
   "dependencies": {
-    "dayjs": "1.11.1",
+    "dayjs": "^1.11.1",
     "flatpickr": "4.6.13",
     "he": "1.2.0"
   }
